<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressActivity">

    <TextView
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"

        android:text="@string/original"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextOriginal"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"

        android:ems="10"

        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original" />


    <TextView
        android:id="@+id/objetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="55dp"
        android:text="@string/objetivo"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/original"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextObjetivo"
        android:layout_width="80dp"
        android:layout_height="50dp"

        android:layout_marginStart="36dp"

        android:layout_marginTop="15dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTextOriginal"
        app:layout_constraintTop_toBottomOf="@+id/objetivo" />


    <TextView
        android:id="@+id/restante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"
        android:text="@string/restante"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/objetivo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextRestante"
        android:layout_width="80dp"
        android:layout_height="50dp"

        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTextObjetivo"
        app:layout_constraintTop_toBottomOf="@+id/restante" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"

        android:layout_marginEnd="20dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextObjetivo" />


    <ImageView
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_add_to_photos_24" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#f1f1f1"
        android:collapseColumns="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="10dp"
                android:text="Fecha"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="10dp"
                android:text="Peso"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="336dp"
            android:layout_height="346dp"

            tools:listitem="@layout/list_row_main" />

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>